adjust header spacing in mobile view and fix resume button

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -7,6 +7,6 @@
     .position {
         top: auto;
         position: fixed;
-        bottom: var(--static-space-24);
+        bottom: var(--static-space-40);
     }
 }
